[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprite cinza/useless.png" type="Texture" id=1]
[ext_resource path="res://sprite cinza/perdeu.png" type="Texture" id=2]
[ext_resource path="res://perdeu.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[node name="perdeu" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.6 )

[node name="Useless" type="Sprite" parent="."]
position = Vector2( 511, 302 )
scale = Vector2( 0.597744, 0.597744 )
texture = ExtResource( 1 )

[node name="Reiniciar" type="Button" parent="."]
margin_left = 380.0
margin_top = 301.0
margin_right = 642.0
margin_bottom = 354.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Reiniciar"

[node name="Desistir" type="Button" parent="."]
margin_left = 380.0
margin_top = 371.0
margin_right = 642.0
margin_bottom = 424.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Desistir"

[node name="Perdeu" type="Sprite" parent="."]
position = Vector2( 516.464, 223.25 )
scale = Vector2( 0.799107, 0.799107 )
texture = ExtResource( 2 )

[node name="Leitura" type="Timer" parent="."]
wait_time = 5.0

[node name="Desistiu" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1043.0
margin_bottom = 597.0
color = Color( 0, 0, 0, 1 )

[node name="Texto" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 252.0
margin_top = 258.0
margin_right = 594.0
margin_bottom = 337.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Às vezes, é preciso se perder para se encontrar. 
Mas para se encontrar, é preciso enfrentar seus 
medos e seguir em frente."
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="pressed" from="Reiniciar" to="." method="_on_Reiniciar_pressed"]
[connection signal="pressed" from="Desistir" to="." method="_on_Desistir_pressed"]
[connection signal="timeout" from="Leitura" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
